--- a/practise.ipynb
+++ b/practise.ipynb
@@ -349,16 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8375e969",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#CHECK WHETHER THE NUMBER IS ARMSTRONG OR NOT --*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "dbc08ad3",
    "metadata": {},
    "outputs": [
@@ -407,22 +397,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "a784a5c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  1  2  3  5  8  13  "
+     ]
+    }
+   ],
    "source": [
     "#to Check if a Given Number is Fibonacci number - Python exmaple 0,1,1,2,3,5,8,13,21\n",
     "n=10\n",
     "a=0\n",
     "b=1\n",
     "z=0\n",
-    "while(n<10):\n",
-    "    print(z)\n",
+    "while(z<n):\n",
     "    a=b\n",
     "    b=z\n",
     "    z=a+b\n",
-    "    print(z)\n",
+    "    print(z,end=\"  \")\n",
     "\n"
    ]
   },
@@ -577,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "4c8546d2",
    "metadata": {},
    "outputs": [
@@ -585,7 +582,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-20 21:17:03.976785\n"
+      "2026-01-02 17:16:17.277091\n"
      ]
     }
    ],
@@ -684,13 +681,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb3f595b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    January 2026\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "          1  2  3  4\n",
+      " 5  6  7  8  9 10 11\n",
+      "12 13 14 15 16 17 18\n",
+      "19 20 21 22 23 24 25\n",
+      "26 27 28 29 30 31\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#WRITE A PROGRAM THAT DISPLAYS THE CURRENT,DATE AND TIME\n",
-    "import calendar\n"
+    "import calendar\n",
+    "year=int(input(\" ENTER A YEAR FROM A USER\"))\n",
+    "month=int(input(\"ENTER A MONTH FROM A USER\"))\n",
+    "cal=calendar.month(year,month)\n",
+    "print(cal)\n",
+    "\n"
    ]
   },
   {
@@ -807,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "65dcccac",
    "metadata": {},
    "outputs": [
@@ -946,10 +963,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6768d7ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        0 \n",
+      "      1 1 1 \n",
+      "    2 2 2 2 2 \n",
+      "  3 3 3 3 3 3 3 \n",
+      "4 4 4 4 4 4 4 4 4 \n"
+     ]
+    }
+   ],
    "source": [
     "#NUMBER TRIANGULAR\n",
     "n=int(input(\"ENTER A NUMBER OF ROWS\"))\n",
@@ -963,10 +992,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4094b4d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1 1 \n",
+      "   2 2 2 \n",
+      "  3 3 3 3 \n",
+      " 4 4 4 4 4 \n",
+      "5 5 5 5 5 5 \n"
+     ]
+    }
+   ],
    "source": [
     "n=6\n",
     "for i in range(1,n):\n",
@@ -975,6 +1016,398 @@
     "    for j in range(0,i+1):#TO PRINT THE STARS\n",
     "        print(i,end=\" \")\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "58dd954f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0 \n",
+      "   1 1 \n",
+      "  2 2 2 \n",
+      " 3 3 3 3 \n",
+      "4 4 4 4 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input(\"ENETR A NUMBER FROM A USER\"))\n",
+    "for i in range(n):\n",
+    "    for j in range(n-i-1):\n",
+    "        print(\" \", end=\"\")\n",
+    "    for j in range(0,i+1):\n",
+    "        print(i,end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c264ae2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pattern\n",
+    "n=5\n",
+    "\n",
+    "# Upper half of diamond\n",
+    "for i in range(1,n+1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(2*i-1): # print stars in odd no's(1,3,5,..) like-in 1st iteration-2*1-1=1 so print * only 1 time on the basis of odd number\n",
+    "            print(\"*\",end=\"\")\n",
+    "    print() #  move to next line after each row\n",
+    "n=4\n",
+    "# lower half of diamond\n",
+    "for i in range(n,0,-1):\n",
+    "    for j in range(n-i+1):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(2*i-1): # print stars in odd no's(1,3,5,..) \n",
+    "        print(\"*\",end=\"\")\n",
+    "    print()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7c7ab8fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   * *\n",
+      "  *   *\n",
+      " *     *\n",
+      "*********\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hollow Triangle\n",
+    "rows = int(input(\"Enter number of rows: \"))\n",
+    "\n",
+    "for i in range(1, rows+1):\n",
+    "    # Print spaces\n",
+    "    for j in range(rows-i):\n",
+    "        print(\" \", end=\"\")\n",
+    "    \n",
+    "    # Print stars and spaces inside\n",
+    "    for j in range(1, 2*i):\n",
+    "        if j == 1 or j == 2*i-1 or i == rows:\n",
+    "            print(\"*\", end=\"\")\n",
+    "        else:\n",
+    "            print(\" \", end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3eaed62f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    \n",
+      "   *\n",
+      "  *\n",
+      " *\n",
+      "*********\n",
+      "  \n",
+      " \n",
+      " \n",
+      " \n",
+      "*\n",
+      " \n",
+      " \n",
+      "   \n",
+      " \n",
+      " \n",
+      " \n",
+      "*\n",
+      "    \n",
+      " \n",
+      " \n",
+      "     \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "\n",
+    "# Upper half of diamond\n",
+    "for i in range(1,n+1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(2*i-1): # print stars in odd no's(1,3,5,..) like-in 1st iteration-2*1-1=1 so print * only 1 time on the basis of odd number\n",
+    "            if j==1 or j==2*i-1 or i==n:\n",
+    "                print(\"*\",end=\"\")\n",
+    "    print() #  move to next line after each row\n",
+    "n=4\n",
+    "# lower half of diamond\n",
+    "for i in range(n,0,-1):\n",
+    "    for j in range(n-i+1):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(2*i-1): # print stars in odd no's(1,3,5,..)\n",
+    "        if j==4 or j==2*i-1 or i==rows:\n",
+    "            print(\"*\",end=\"\")\n",
+    "        else:\n",
+    "            print(\" \",end=\"\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eab5e77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   * *\n",
+      "  *   *\n",
+      " *     *\n",
+      "*********\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input(\"ENTER A NUMBER OF ROWS\"))\n",
+    "for i in range(1,n+1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(1,2*i):\n",
+    "        if j==1 or j==2*i-1 or i == n:\n",
+    "             print(\"*\",end=\"\")\n",
+    "        else:\n",
+    "            print(\" \",end=\"\")\n",
+    "\n",
+    "    print()\n",
+    "\n",
+    "n=4\n",
+    "for i in range(4,0,-1):\n",
+    "    for j in range(n-i+1):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in  range()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "157c052f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 \n",
+      " 1 2 3 4 5 6 7 8 \n",
+      "  1 2 3 4 5 6 7 \n",
+      "   1 2 3 4 5 6 \n",
+      "    1 2 3 4 5 \n",
+      "     1 2 3 4 \n",
+      "      1 2 3 \n",
+      "       1 2 \n",
+      "        1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=9\n",
+    "for i in range(n,0,-1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j,end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "06875ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      1 2 \n",
+      "     1 2 3 \n",
+      "    1 2 3 4 \n",
+      "   1 2 3 4 5 \n",
+      "  1 2 3 4 5 6 \n",
+      " 1 2 3 4 5 6 7 \n",
+      "1 2 3 4 5 6 7 8 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "for i in range(2,n+1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j,end=\" \")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9368a570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 \n",
+      " 1 2 3 4 5 6 7 8 \n",
+      "  1 2 3 4 5 6 7 \n",
+      "   1 2 3 4 5 6 \n",
+      "    1 2 3 4 5 \n",
+      "     1 2 3 4 \n",
+      "      1 2 3 \n",
+      "       1 2 \n",
+      "        1 \n",
+      "       1 2 \n",
+      "      1 2 3 \n",
+      "     1 2 3 4 \n",
+      "    1 2 3 4 5 \n",
+      "   1 2 3 4 5 6 \n",
+      "  1 2 3 4 5 6 7 \n",
+      " 1 2 3 4 5 6 7 8 \n",
+      "1 2 3 4 5 6 7 8 9 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# NUMBER HOURGLASS - DIAMOND PATTERN\n",
+    "n=9\n",
+    "for i in range(n,0,-1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j,end=\" \") # TO PRINT COLUMN VALUES\n",
+    "    print()\n",
+    "\n",
+    "n=9\n",
+    "for i in range(2,n+1):\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \",end=\"\")\n",
+    "    for j in range(1,i+1): # Output begins with 1 2 as i starts from 2 for example-(1,2+1)-1,2 first iteration\n",
+    "        print(j,end=\" \") #  TO PRINT COLUMN VALUES\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d9b9f1ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  5  6  7  8  9  \n",
+      "1                       9  \n",
+      "1                       9  \n",
+      "1                       9  \n",
+      "1                       9  \n",
+      "1                       9  \n",
+      "1                       9  \n",
+      "1  2  3  4  5  6  7  8  9  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#SQUARE HOLLOW PATTERN\n",
+    "n=9\n",
+    "for i in range(1,n):#i REPRESENTS ROWS\n",
+    "    for j in range(1,n+1):#j REPRESENTS COLUMNS\n",
+    "        if(i==1 or i==n-1 or j==1 or j==n):\n",
+    "            print(j,end=\"  \")\n",
+    "        else:\n",
+    "            print(\" \",end=\"  \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f83aaf43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find Missing Number in 1 to N\n",
+    "list=[1,2,4,5]\n",
+    "n=5\n",
+    "\n",
+    "expected_sum=n*(n+1)//2\n",
+    "actual_sum=sum(list)\n",
+    "print(expected_sum - actual_sum)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b5857175",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[55, 66, 77, 88, 899]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[1,2,33,44,55,66,77,88,899]\n",
+    "print(list[-5:])"
    ]
   }
  ],
